--- a/view/search.html
+++ b/view/search.html
@@ -152,7 +152,7 @@
         لم يتم العثور على أي آية بِحَسب <a href="#!/search-features" target="_blank">طريقة البحث</a> المُوَضَّحة
     </div>
 
-    <section class="left" ng-if="isSearchDone && pagedItems.length" style="border-right:1px">
+    <section class="left" ng-show="isSearchDone && pagedItems.length" style="border-right:1px">
         <!--    <button ng-click="updateUrl()">تحديث الرابط</button>-->
 
         <!--    <div id="filter-settings">-->
