--- a/view/surah.html
+++ b/view/surah.html
@@ -3,14 +3,16 @@
     <div id="top-container">
         <h1>متصفح سور القرآن</h1>
         <input type="text" class="full-width" ng-model="searchText" placeholder="إبحث باسم السورة...">
+        <input type="text" class="full-width" ng-model="searchNumber" placeholder="إبحث برقم السورة...">
         <div id="suwar-list-container" class="scroll-container">
             <ul id="suwar-list">
-                <li ng-repeat="surah in all_suwar | filter:searchText">
+                <li ng-repeat="surah in filteredSuwar">
                     <a ng-href="#!/surah?id={{surah.order}}#surah" class="surah-link">
                         {{surah.order}}. {{surah.title}}
                     </a>
                 </li>
             </ul>
+            <div ng-show="filteredSuwar.length == 0">لم يتم العثور على السورة</div>
         </div>
     </div>
 </div>
